# DriverIndexer

./: Cargo.toml  build.bat  build.rs
src/: main.rs  tests.rs
src/cli/: cli.rs  matches.rs  validator.rs
src/command/: classify_driver.rs  create_driver.rs  create_index.rs  export_driver.rs  import_driver.rs  load_driver.rs  load_offline_driver.rs  mod.rs  remove_driver.rs
src/i18n/: mod.rs
src/i18n/en-US/: cli.ftl  main.ftl
src/i18n/zh-CN/: cli.ftl  main.ftl
src/utils/: devcon.rs  drvstoreAPI.rs  newdevAPI.rs  setupAPI.rs  sevenZIP.rs  util.rs
