[package]
name = "DriverIndexer"
version = "1.1.0"
authors = ["Fir"]
edition = "2018"
build = "build.rs"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[build-dependencies]
embed-resource = "2.4.3"
thunk-rs = "0.3.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
vc-ltl = "5.1.1"
clap = "~2.33"
glob = "0.3.1"
chardet = "0.2.4"
encoding = "0.2"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0"
rust-embed = "8.5.0"
lazy_static = "1.4.0"
console = "0.15.8"
chrono = "0.4"
remove_dir_all = "1.0"
unic-langid = "0.9.0"
fluent-templates = "0.10.1"
libloading = "0.8.5"
widestring = "1.0.0-beta.1"
fastrand = "2.1.1"
goblin = "0.9.3"

[dependencies.windows]
version = "0.59.0"
features = ["Win32_Globalization", "Win32_Devices_DeviceAndDriverInstallation", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_Security", "Win32_System_Ioctl", "Win32_System_SystemInformation"]

[dependencies.windows-version]
version = "0.1"
